--- a/web/gestec/usuario/perfil.xhtml
+++ b/web/gestec/usuario/perfil.xhtml
@@ -185,8 +185,11 @@
                         <hr/>
 
                         <h5><strong>#{msjGestec.vivienda}</strong> &nbsp;
+                            <c:forEach items="#{sesionGestec.listarLocalidad}" var="l">
+                                #{l.nombreLocalidad}
+                            </c:forEach>
                             <c:forEach items="#{sesionGestec.listarDireccion}" var="d">
-                                #{d.idBarrio.idLocalidad.nombreLocalidad} #{d.idBarrio.nombreBarrio}
+                               #{d.idBarrio.nombreBarrio}
                             </c:forEach>
                         </h5><br/>
                         <h5><strong>#{msjGestec.cumpleaños}</strong> &nbsp;#{sesionGestec.formatearFechaCumpleaños()}</h5><br/>
