--- a/web/gestec/usuario/tecnico.xhtml
+++ b/web/gestec/usuario/tecnico.xhtml
@@ -258,9 +258,9 @@
                                                                                                  maxlength="254"
                                                                                                  value="#{citasRequest.comentario}"
                                                                                                  style="padding: 5px;border: 1px solid #ddd"/>
-                                                                                    <h:commandButton class="btn btn-primary col-md-2 pull-right"
-                                                                                                     value="Enviar"
-                                                                                                     style="font-size: 15px;padding: 3px"
+                                                                                    <h:commandButton class="btn btn-primary pull-right"
+                                                                                                     value="Enviar cotización"
+                                                                                                     style="margin-top: 30px"
                                                                                                      actionListener="#{citasRequest.añadirComentario()}"/>
                                                                                     </h:form>
 
