--- a/web/gestec/usuario/cliente.xhtml
+++ b/web/gestec/usuario/cliente.xhtml
@@ -180,10 +180,14 @@
                                                 <div class="col-md-4 comentarios-publicacion" style="border-left: 0;border-bottom: 0">
 
                                                     <div class="col-md-12 oferta">
-                                                        <h5><strong>#{msjGestec.postulaciones} (#{pub.servicionoTiquet.relequiposervicioList.size()})</strong></h5>
+                                                        <h5><strong>#{msjGestec.postulaciones} (#{pub.servicionoTiquet.relequiposervicioList.size() - 1})</strong></h5>
                                                     </div>
 
                                                     <div class="col-md-12" style="margin-top: 10px">
+                                                        <center style="margin-top: 30px">
+                                                            <span class="fa fa-comments-o" style="font-size: 120px"></span>
+                                                            <h4>No hay postulaciones para esta solicitud</h4>
+                                                        </center>
                                                         <ul class="media-list">
                                                             <li class="media">
 
