--- a/web/gestec/usuario/cliente.xhtml
+++ b/web/gestec/usuario/cliente.xhtml
@@ -180,14 +180,16 @@
                                                 <div class="col-md-4 comentarios-publicacion" style="border-left: 0;border-bottom: 0">
 
                                                     <div class="col-md-12 oferta">
-                                                        <h5><strong>#{msjGestec.postulaciones} (#{pub.servicionoTiquet.relequiposervicioList.size() - 1})</strong></h5>
+                                                        <h5><strong>#{msjGestec.postulaciones} (#{citasRequest.getComentarios(pub).size() - 1})</strong></h5>
                                                     </div>
 
                                                     <div class="col-md-12" style="margin-top: 10px">
-                                                        <center style="margin-top: 30px">
-                                                            <span class="fa fa-comments-o" style="font-size: 120px"></span>
-                                                            <h4>No hay postulaciones para esta solicitud</h4>
-                                                        </center>
+                                                        <c:if test="#{citasRequest.getComentarios(pub).size() ==1}">
+                                                            <center style="margin-top: 30px">
+                                                                <span class="fa fa-comments-o" style="font-size: 120px"></span>
+                                                                <h4>No hay postulaciones para esta solicitud, realiza una cotización</h4>
+                                                            </center>
+                                                        </c:if>
                                                         <ul class="media-list">
                                                             <li class="media">
 
@@ -214,7 +216,7 @@
                                                                                                title="Agendar cita"
                                                                                                pt:data-toggle="modal" pt:data-target="#confirmacionSolicitud" >
                                                                                     <f:ajax event="click" render="mensaje"
-                                                                                            listener="#{citasRequest.setServicioTecnico(comentario.servicionoTiquet, comentario.usuario, comentario.servicionoTiquet.citasList.get(0))}"></f:ajax>
+                                                                                            listener="#{citasRequest.setServicioTecnico(comentario)}"></f:ajax>
                                                                                 </h:commandLink>
 
                                                                                 <h:commandLink title="Denegar solicitud"
