--- a/web/gestec/cita/citas.xhtml
+++ b/web/gestec/cita/citas.xhtml
@@ -204,7 +204,9 @@
                                             </c:if>
                                             &nbsp;
                                             <c:if test="#{citasRequest.getCitaMs(msj).estadoCita=='Agendada'}">
-                                                <h:commandLink id="botonCulminar" class="btn btn-primary" value="Culminar servicio"/>
+                                                <h:commandLink id="botonCulminar" class="btn btn-primary" value="Culminar servicio"
+                                                               title="Si ya realizaste el servicio lo puedes dar por terminado aquí."
+                                                               actionListener="#{citasRequest.irACulminar(citasRequest.getCitaMs(msj))}"/>
                                             </c:if>
                                             <div class="pull-right">
                                                 <c:if test="#{citasRequest.getCitaMs(msj).estadoCita=='Agendada' ||
