--- a/web/gestec/usuario/perfil_externo.xhtml
+++ b/web/gestec/usuario/perfil_externo.xhtml
@@ -614,7 +614,7 @@
 
                                 <div class="row" style="padding: 10px;">
                                     <div class="col-md-1 col-sm-2 col-xs-2">
-                                        <p:graphicImage value="#{sesionGestec.imagenContacto}" style="height: 40px;width: 40px">
+                                        <p:graphicImage value="#{sesionGestec.imagenContacto}" style="height: 40px;width: 40px" cache="false">
                                             <f:param name="imgC" value="#{cont.idUsuario.idUsuario}"/>
                                         </p:graphicImage>
                                     </div>
