--- a/web/gestec/usuario/perfil.xhtml
+++ b/web/gestec/usuario/perfil.xhtml
@@ -35,7 +35,7 @@
 
     <ui:define name="content2">
         <f:view locale="#{sesionGestec.idiomaSeleccionado}">
-            <h:form>
+            <h:form enctype="multipart/form-data" prependId="false">
 
                 <div class="container" style="padding: 20px">
 
@@ -53,9 +53,11 @@
                             </h3>
                             <hr/>
 
-                            <p:graphicImage value="#{fotosController.fto}" class="img-circle" style="width: 130px;height: 130px;" cache="false">
+                            <p:graphicImage value="#{fotosController.fto}" class="img-circle" 
+                                            style="width: 130px;height: 130px;" cache="false" >
                                 <f:param name="pif" value="#{sesionGestec.usuario.idUsuario}"/>
                             </p:graphicImage>
+
 
                             <h4 style="padding: 10px"><strong>#{sesionGestec.usuario.nombreUsuario} #{sesionGestec.usuario.apellido}</strong></h4>
                             <h4>#{sesionGestec.usuario.tipoUsuario}</h4>
@@ -290,12 +292,27 @@
                         <div class="inicio col-md-12" style="border-top: none;padding: 7px">
 
                             <button class="btn btn-default btn-archivo" style="position: relative;cursor: pointer">
-                                <span class="fa fa-file-image-o"></span> #{msjGestec.adjuntar}
-                                <input type="file" accept="image/*" class="form-control archivo" style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;opacity: 0;cursor: pointer"/>
+                                <h:inputFile value="#{equipoController.archivoPublicacion}"
+                                             validator="#{equipoController.validar}"
+                                             style="position: absolute;width: 50px;height: 35px;top: 0;left: 0;opacity: 0;cursor: pointer"
+                                             >
+                                    <f:ajax event="change" render="nomArc"/>
+                                </h:inputFile>
+                                <span class="fa fa-file-image-o"></span> 
+                                <h:panelGroup id="nomArc">
+                                    #{equipoController.nombreArchivo}
+                                </h:panelGroup>
                             </button>
-                            <button class="btn btn-primary pull-right">
-                                #{msjGestec.publicar}
-                            </button>
+                            <h:commandButton value="Subir (Ajax)" action="#{equipoController.subir}" 
+                                             class="btn btn-primary pull-right">
+                                <f:ajax execute="file" render="@all"/>
+                            </h:commandButton>
+                            #{equipoController.contenido}
+                            <!--<h:panelGrid id="content" columns="1">
+                                <h:inputTextarea readonly="true" value=""
+                                                 rows="10" cols="100"/>
+                            </h:panelGrid>-->
+
                         </div>
 
                         <div class="row">
